- Mise à jour pplication

--- a/GB/Views/Securite/Role.cshtml
+++ b/GB/Views/Securite/Role.cshtml
@@ -93,7 +93,7 @@
                                     <thead class="headings">
                                         <tr>
                                             <th width="20px">
-                                                <input type="checkbox" id="check-all" class="flat gb-temps-icheck-role">
+                                                <input type="checkbox" id="check-all" class="flat">
                                             </th>
                                             <th class="column-title">Code</th>
                                             <th class="column-title">@ViewBag.Lang.Name_french</th>
@@ -292,7 +292,7 @@
                                     <thead class="headings">
                                         <tr>
                                             <th width="20px">
-                                                <input type="checkbox" id="check-configuration-all" class="flat gb-temps-icheck-autorisation">
+                                                <input type="checkbox" id="check-configuration-all" class="flat">
                                             </th>
                                             <th class="column-title">Code menu</th>
                                             <th class="column-title">@ViewBag.Lang.Name menu</th>
