--- a/GB/Views/Securite/Role/_Modals.cshtml
+++ b/GB/Views/Securite/Role/_Modals.cshtml
@@ -111,7 +111,7 @@
                     <thead class="headings">
                         <tr>
                             <th width="20px">
-                                <input type="checkbox" id="check-menu-all" class="flat gb-temps-icheck-menu">
+                                <input type="checkbox" id="check-menu-all" class="flat">
                             </th>
                             <th class="column-title">@ViewBag.Lang.Name</th>
                             <th class="column-title">@ViewBag.Lang.Menu_group</th>
