- Intégration du menu securité-utilisateur - Corrections des beugs - Mise à jour application

--- a/GB/Views/Securite/Module/_Modals.cshtml
+++ b/GB/Views/Securite/Module/_Modals.cshtml
@@ -30,13 +30,16 @@
                             <!-- Id -->
                             <input type="hidden" id="form_id" name="id" value="0" />
 
+                            <!-- ligne -->
                             <div class="col-xs-12 col-lg-12">
                                 <div class="form-group">
                                     <label for="form_code">Code :</label>
                                     <input class="form-control" type="text" id="form_code" name="code" placeholder="Code.*" required />
                                 </div>
                             </div>
+                            <!-- ./ligne -->
 
+                            <!-- ligne -->
                             <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
                                     <label for="form_libelle_fr">@ViewBag.Lang.Name_french :</label>
@@ -50,6 +53,7 @@
                                     <input class="form-control" type="text" id="form_libelle_en" name="libelle_en" placeholder="@ViewBag.Lang.Name_english .*" required />
                                 </div>
                             </div>
+                            <!-- ./ligne -->
 
                         </div>
 
