--- a/GB/Views/Securite/Menu/_Modals.cshtml
+++ b/GB/Views/Securite/Menu/_Modals.cshtml
@@ -30,13 +30,16 @@
                             <!-- Id -->
                             <input type="hidden" id="form_id" name="id" value="0" />
 
+                            <!-- ligne -->
                             <div class="col-xs-12 col-lg-12">
                                 <div class="form-group">
                                     <label for="form_code">Code :</label>
                                     <input class="form-control" type="text" id="form_code" name="code" placeholder="Code.*" required />
                                 </div>
                             </div>
+                            <!-- ./ligne -->
 
+                            <!-- ligne -->
                             <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
                                     <label for="form_libelle_fr">@ViewBag.Lang.Name_french :</label>
@@ -50,10 +53,12 @@
                                     <input class="form-control" type="text" id="form_libelle_en" name="libelle_en" placeholder="@ViewBag.Lang.Name_english .*" required />
                                 </div>
                             </div>
+                            <!-- ./ligne -->
 
+                            <!-- ligne -->
                             <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
-                                    <label for="form_id_controller">@ViewBag.Lang.Menu_group (Controller) :</label>
+                                    <label for="form_id_controller">@ViewBag.Lang.Menu_group :</label>
                                     <select class="form-control" name="id_controller" id="form_id_controller" required>
                                         @Html.Raw(ViewBag.donnee.HTML_Select_id_controller)
                                     </select>
@@ -68,6 +73,7 @@
                                     </select>
                                 </div>
                             </div>
+                            <!-- ./ligne -->
 
                         </div>
 
