--- a/GB/Views/Securite/Role.cshtml
+++ b/GB/Views/Securite/Role.cshtml
@@ -246,7 +246,7 @@
 
                                             <div class="col-xs-12 col-lg-3">
                                                 <div class="form-group">
-                                                    <select class="form-control" name="id_role" id="form_role_code" onchange="$('#form_role_libelle').val($('#form_role_code').val()); $('.gb-temps-btn-action-menu').prop('disabled', true);" required>
+                                                    <select class="form-control" name="id_role" id="form_role_code" onchange="$('#form_role_libelle').val($('#form_role_code').val()); $('.gb-temps-btn-action-menu').prop('disabled', true); $('#form-configuration').submit();" required>
                                                         @Html.Raw(ViewBag.donnee.HTML_Select_code_role)
                                                     </select>
                                                 </div>
@@ -254,7 +254,7 @@
 
                                             <div class="col-xs-12 col-lg-3">
                                                 <div class="form-group">
-                                                    <select class="form-control" name="libelle" id="form_role_libelle" onchange="$('#form_role_code').val($('#form_role_libelle').val()); $('.gb-temps-btn-action-menu').prop('disabled', true);" required>
+                                                    <select class="form-control" name="libelle" id="form_role_libelle" onchange="$('#form_role_code').val($('#form_role_libelle').val()); $('.gb-temps-btn-action-menu').prop('disabled', true); $('#form-configuration').submit();" required>
                                                         @Html.Raw(ViewBag.donnee.HTML_Select_code_libelle)
                                                     </select>
                                                 </div>
@@ -268,10 +268,12 @@
                                                         data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> <span class='hidden-xs'>@ViewBag.Lang.Process ...</span>">
                                                     <i class="fa fa-remove"></i> @ViewBag.Lang.Delete_menus
                                                 </button>
-                                                <button class="btn btn-default pull-right" id="btn-configuration-rechercher-role" type="submit"
+                                                @*
+                                                 <button class="btn btn-default pull-right" id="btn-configuration-rechercher-role" type="submit"
                                                         data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> <span class='hidden-xs'>@ViewBag.Lang.Process ...</span>">
                                                     <i class="fa fa-list-ul"></i> @ViewBag.Lang.Display
                                                 </button>
+                                                *@
                                             </div>
 
                                         </div>
