- AJout du menu institution - Mise à jour Version d'application

--- a/GB/Resources/css/gb.style.css
+++ b/GB/Resources/css/gb.style.css
@@ -457,3 +457,20 @@ tr {
 legend {
     margin-bottom: 10px;
 }
+
+.menu_section {
+    margin-bottom: 10px;
+}
+
+.gb-hr {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: 0;
+    border-top: 1px solid #eee;
+}
+
+.thumbnail {
+    height: auto;
+    overflow: visible;
+    margin-bottom: 0px;
+}
