- Mise à jour du menu de gestion des institutions - Mise à jour version de l'application

--- a/GB/Views/ConfigurationBanque/Institution/_Modals.cshtml
+++ b/GB/Views/ConfigurationBanque/Institution/_Modals.cshtml
@@ -37,7 +37,10 @@
 
                                     <center>
                                         <img id="form_image" class="img-responsive" src="~/Resources/images/png/Utilisateur.png" style="height: 138px;" alt="Logo" title="Logo" />
+                                        <!-- fichier -->
                                         <input type="file" id="form_image_fichier" name="logo" class="hidden-lg" accept="image/.jpeg,.png,.gif,.jpg" />
+                                        <!-- image_statut -->
+                                        <input type="hidden" id="form_image_statut" name="image_statut" value="0" />
                                     </center>
 
                                     <hr class="gb-hr" />
