--- a/GB/Views/Shared/_LayoutApplication.cshtml
+++ b/GB/Views/Shared/_LayoutApplication.cshtml
@@ -21,6 +21,8 @@
     <link href="@Url.Content("~/Plugins/font-awesome/css/font-awesome.min.css")" rel="stylesheet" />
     <!-- NProgress -->
     @*<link href="@Url.Content("~/Plugins/nprogress/nprogress.css")" rel="stylesheet" />*@
+    <!-- EasyAutocomplete-1.3.5 -->
+    <link href="@Url.Content("~/Plugins/EasyAutocomplete-1.3.5/easy-autocomplete.min.css")" rel="stylesheet" />
     <!-- jQuery custom content scroller -->
     <link href="@Url.Content("~/Plugins/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css")" rel="stylesheet" />
     <!-- iCheck -->
@@ -61,6 +63,8 @@
     <script src="@Url.Content("~/Plugins/fastclick/lib/fastclick.js")" type="text/javascript"></script>
     <!-- NProgress -->
     @*<script src="@Url.Content("~/Plugins/nprogress/nprogress.js")" type="text/javascript"></script>*@
+    <!-- EasyAutocomplete-1.3.5 -->
+    <script src="@Url.Content("~/Plugins/EasyAutocomplete-1.3.5/jquery.easy-autocomplete.js")" type="text/javascript"></script>
     <!-- Notify -->
     <script src="@Url.Content("~/Plugins/notify/pnotify.core.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Plugins/notify/pnotify.buttons.js")" type="text/javascript"></script>
