--- a/GB/Views/Application/Main/_Header.cshtml
+++ b/GB/Views/Application/Main/_Header.cshtml
@@ -5,11 +5,23 @@
 
         <nav>
 
+            <div class="navbar nav_title" style="border: 0;">
+                <a href="#" class="site_title">
+                    <i class="fa fa-bank"></i> <span>@ViewBag.APP_NAME</span>
+                </a>
+            </div>
+
+            <div class="navbar nav_title" style="border: 0;">
+                <a id="titre_description_page" href="javascript:;" class="site_title" style="font-weight: normal; font-size:18px;"></a>
+            </div>
+
+            @*
             <div class="nav toggle">
                 <a id="menu_toggle">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
+            *@
 
             <ul class="nav navbar-nav navbar-right">
                 
