--- a/GB/Views/Application/Principale.cshtml
+++ b/GB/Views/Application/Principale.cshtml
@@ -13,7 +13,7 @@
 
 <div class="row">
 
-    <div class="col-lg-12">
+    @*<div class="col-lg-12">
 
         <div class="page-title">
 
@@ -23,6 +23,6 @@
 
         </div>
 
-    </div>
+    </div>*@
 
 </div>
