--- a/GB/Views/ConfigurationBanque/ProduitClientJudiciaire.cshtml
+++ b/GB/Views/ConfigurationBanque/ProduitClientJudiciaire.cshtml
@@ -76,8 +76,9 @@
                             <th class="column-title">Code</th>
                             <th class="column-title">@ViewBag.Lang.Name_french</th>
                             <th class="column-title">@ViewBag.Lang.Name_english</th>
+                            <th class="column-title">@ViewBag.Lang.Creation_date</th>
                             <th class="column-title last" width="50px">Action</th>
-                            <th class="bulk-actions" colspan="4">
+                            <th class="bulk-actions" colspan="5">
                                 <a class="antoo" style="color:#fff; font-weight:500;">
                                     Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
                                 </a>
