--- a/GB/Views/ConfigurationBanque/ProduitCreation/_Modals.cshtml
+++ b/GB/Views/ConfigurationBanque/ProduitCreation/_Modals.cshtml
@@ -2,7 +2,7 @@
 <!-- form 1 -->
 <div class="modal fade bs-example-modal-lg" id="modal_form" role="alert" data-backdrop="static" data-keyboard="false">
     
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         
         <div class="modal-content">
             
@@ -31,47 +31,43 @@
                             <input type="hidden" id="form_id" name="id" value="0" />
 
                             <!-- ligne -->
-                            <div class="col-xs-12 col-lg-12">
+                            <div class="col-lg-12">
+                                <legend>
+                                    <i class="fa fa-info"></i> @ViewBag.Lang.Product_information
+                                </legend>
+                            </div>
+                            <!-- ./ligne -->
+
+                            <!-- ligne -->
+                            <div class="col-xs-12 col-lg-4">
                                 <div class="form-group">
                                     <label for="form_code">Code :</label>
                                     <input class="form-control" type="text" id="form_code" name="code" placeholder="Code.*" required />
                                 </div>
                             </div>
-                            <!-- ./ligne -->
 
-                            <!-- ligne -->
-                            <div class="col-xs-12 col-lg-6">
+                            <div class="col-xs-12 col-lg-4">
                                 <div class="form-group">
-                                    <label for="form_libelle_fr">@ViewBag.Lang.Name_french :</label>
-                                    <input class="form-control" type="text" id="form_libelle_fr" name="libelle_fr" placeholder="@ViewBag.Lang.Name_french .*" required />
+                                    <label for="form_libelle">@ViewBag.Lang.Name :</label>
+                                    <input class="form-control" type="text" id="form_libelle" name="libelle" placeholder="@ViewBag.Lang.Name .*" required />
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-lg-6">
+                            <div class="col-xs-12 col-lg-4">
                                 <div class="form-group">
-                                    <label for="form_libelle_en">@ViewBag.Lang.Name_english :</label>
-                                    <input class="form-control" type="text" id="form_libelle_en" name="libelle_en" placeholder="@ViewBag.Lang.Name_english .*" required />
-                                </div>
-                            </div>
-                            <!-- ./ligne -->
-
-                            <!-- ligne -->
-                            <div class="col-xs-12 col-lg-6">
-                                <div class="form-group">
-                                    <label for="form_id_controller">@ViewBag.Lang.Menu_group :</label>
-                                    <select class="form-control" name="id_controller" id="form_id_controller" required>
-                                        @Html.Raw(ViewBag.donnee.HTML_Select_id_controller)
+                                    <label for="form_type">Type :</label>
+                                    <select class="form-control" id="form_type" name="type" required>
+                                        @Html.Raw(ViewBag.donnee.HTML_Select_type)
                                     </select>
                                 </div>
                             </div>
+                            <!-- ./ligne -->
 
-                            <div class="col-xs-12 col-lg-6">
-                                <div class="form-group">
-                                    <label for="form_view">@ViewBag.Lang.Views :</label>
-                                    <select class="form-control" name="view" id="form_view" required>
-                                        <option value="" title="@(ViewBag.Lang.Select)...">@(ViewBag.Lang.Select)...</option>
-                                    </select>
-                                </div>
+                            <!-- ligne -->
+                            <div class="col-lg-12">
+                                <legend>
+                                    <i class="fa fa-info"></i> @ViewBag.Lang.This_product_will_be_apply_to_the_following_transactions
+                                </legend>
                             </div>
                             <!-- ./ligne -->
 
