--- a/GB/Views/Securite/Role/_Modals.cshtml
+++ b/GB/Views/Securite/Role/_Modals.cshtml
@@ -2,7 +2,7 @@
 <!-- form 1 -->
 <div class="modal fade bs-example-modal-lg" id="modal_form" role="alert" data-backdrop="static" data-keyboard="false">
     
-    <div id="modal_form_taille" class="modal-dialog">
+    <div class="modal-dialog">
         
         <div class="modal-content">
             
