--- a/GB/Views/Shared/_LayoutApplication.cshtml
+++ b/GB/Views/Shared/_LayoutApplication.cshtml
@@ -97,6 +97,8 @@
     <script src="@Url.Content("~/Plugins/moment/min/moment.min.js")" type="text/javascript"></script>
     <!-- bootstrap-daterangepicker -->
     <script src="@Url.Content("~/Plugins/bootstrap-daterangepicker/daterangepicker.js")" type="text/javascript"></script>
+    <!-- input-mask -->
+    <script src="@Url.Content("~/Plugins/input-mask/jquery.mask.min.js")" type="text/javascript"></script>
     <!-- Custom Theme Scripts -->
     <script src="@Url.Content("~/Resources/js/custom.js")" type="text/javascript"></script>
     <!-- gb.script.js -->
