- AJout du menu 'Gestion des types de garantié' - Ajout du menu 'Classification des provisions pour prêts'. - Mise à jour de la position du chargement du menu d'acceuil par défaut. - Ajout du menu Gestion des motifs de prêt - Mise à jour du menu utilisateur - AJout du menu 'TypePret' - Mise à jour version de l'application

--- a/GB/Resources/css/gb.style.css
+++ b/GB/Resources/css/gb.style.css
@@ -512,6 +512,18 @@ legend {
     width:auto;
 }
 
-.gb-modal-enfant {
-    z-index: 9998;
+.gb-modal-enfant-1 {
+    z-index: 10000;
+}
+
+.gb-modal-enfant-2 {
+    z-index: 10000;
+}
+
+.gb-modal-enfant-3 {
+    z-index: 10000;
+}
+
+.gb-modal-enfant-4 {
+    z-index: 10000;
 }
