--- a/GB/Views/ConfigurationOperation/TypePret.cshtml
+++ b/GB/Views/ConfigurationOperation/TypePret.cshtml
@@ -61,7 +61,7 @@
             </div>
 
             <!-- Formulaire modals -->
-            @Html.Partial("Utilisateur/_Modals")
+            @Html.Partial("TypePret/_Modals")
 
             <div class="x_content">
 
@@ -73,19 +73,13 @@
                             <th width="20px">
                                 <input type="checkbox" id="check-all" class="flat">
                             </th>
-                            <th class="column-title">@ViewBag.Lang.Agency</th>
-                            <th class="column-title">@ViewBag.Lang.Login</th>
+                            <th class="column-title">Code</th>
                             <th class="column-title">@ViewBag.Lang.Name</th>
-                            <th class="column-title">@ViewBag.Lang.Job</th>
-                            <th class="column-title">@ViewBag.Lang.Open_back_date</th>
-                            <th class="column-title">@ViewBag.Lang.Open_back_working_date</th>
-                            <th class="column-title">@ViewBag.Lang.Open_branch</th>
-                            <th class="column-title">@ViewBag.Lang.Connection_status</th>
-                            <th class="column-title">@ViewBag.Lang.Suspended</th>
-                            <th class="column-title">@ViewBag.Lang.Password_expiration</th>
-                            <th class="column-title">@ViewBag.Lang.Signing_authority</th>
+                            <th class="column-title">@ViewBag.Lang.Begining_period</th>
+                            <th class="column-title">@ViewBag.Lang.Ending_period</th>
+                            <th class="column-title">@ViewBag.Lang.Periodicity</th>
                             <th class="column-title last" width="50px">Action</th>
-                            <th class="bulk-actions" colspan="12">
+                            <th class="bulk-actions" colspan="6">
                                 <a class="antoo" style="color:#fff; font-weight:500;">
                                     Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
                                 </a>
