--- a/GB/Views/SecuriteUtilisateur/Utilisateur/_Modals.cshtml
+++ b/GB/Views/SecuriteUtilisateur/Utilisateur/_Modals.cshtml
@@ -31,58 +31,100 @@
                             <input type="hidden" id="form_id_utilisateur" name="id_utilisateur" value="0" />
 
                             <!-- ligne -->
-                            <div class="col-xs-12 col-lg-6">
-                                <div class="form-group">
-                                    <label for="form_id_agence">@ViewBag.Lang.Agency code :</label>
-                                    <select class="form-control" name="id_agence" id="form_id_agence" onchange="$('#form_libelle_agence').val($('#form_id_agence').val());" required>
-                                        @Html.Raw(ViewBag.donnee.HTML_Select_code_agence)
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="col-xs-12 col-lg-6">
-                                <div class="form-group">
-                                    <label for="form_libelle_agence">@ViewBag.Lang.Agency @((ViewBag.Lang.Name as string).ToLower()) :</label>
-                                    <select class="form-control" id="form_libelle_agence" onchange="$('#form_id_agence').val($('#form_libelle_agence').val());" required>
-                                        @Html.Raw(ViewBag.donnee.HTML_Select_libelle_agence)
-                                    </select>
-                                </div>
-                            </div>
-                            <!-- ./ligne -->
-
-                            <!-- ligne -->
-                            <div class="col-xs-12 col-lg-6">
+                            <div class="col-xs-12 col-lg-4">
                                 <div class="form-group">
                                     <label for="form_compte">@ViewBag.Lang.Login :</label>
                                     <input class="form-control" type="text" id="form_compte" name="compte" placeholder="@ViewBag.Lang.Login .*" required />
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-lg-6">
+                            <div class="col-xs-12 col-lg-4">
                                 <div class="form-group">
                                     <label for="form_nom_utilisateur">@ViewBag.Lang.Name :</label>
                                     <input class="form-control" type="text" id="form_nom_utilisateur" name="nom_utilisateur" placeholder="@ViewBag.Lang.Name .*" required />
                                 </div>
                             </div>
+
+                            <div class="col-xs-12 col-lg-4">
+                                <div class="form-group">
+                                    <label for="form_id_autorite_signature">@ViewBag.Lang.Signing_authority :</label>
+                                    <div class="input-group">
+                                        <span class="input-group-btn">
+                                            <button id="btn_autorite_signature_modal" class="btn btn-default" type="button">
+                                                <i class="fa fa-pencil-square"></i>
+                                            </button>
+                                        </span>
+                                        <!-- id_autorite_signature -->
+                                        <input type="hidden" id="form_id_autorite_signature" name="id_autorite_signature" value="0" />
+                                        <input class="form-control" type="text" id="form_code_autorite_signature" placeholder="@ViewBag.Lang.Signing_authority .*" />
+                                    </div>
+                                </div>
+                            </div>
                             <!-- ./ligne -->
 
                             <!-- ligne -->
-                            <div class="col-xs-12 col-lg-6">
-                                <div class="form-group">
-                                    <label for="form_id_profession">@ViewBag.Lang.Job code :</label>
-                                    <select class="form-control" name="id_profession" id="form_id_profession" onchange="$('#form_libelle_profession').val($('#form_id_profession').val());" required>
-                                        @Html.Raw(ViewBag.donnee.HTML_Select_code_profession)
-                                    </select>
+                            <div class="col-lg-6">
+
+                                <div class="row">
+
+                                    <div class="col-lg-12">
+                                        <legend>
+                                            <i class="fa fa-square"></i> @ViewBag.Lang.Agency
+                                        </legend>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-6">
+                                        <div class="form-group">
+                                            <label for="form_id_agence">Code :</label>
+                                            <select class="form-control" name="id_agence" id="form_id_agence" onchange="$('#form_libelle_agence').val($('#form_id_agence').val());" required>
+                                                @Html.Raw(ViewBag.donnee.HTML_Select_code_agence)
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-6">
+                                        <div class="form-group">
+                                            <label for="form_libelle_agence">@ViewBag.Lang.Name :</label>
+                                            <select class="form-control" id="form_libelle_agence" onchange="$('#form_id_agence').val($('#form_libelle_agence').val());" required>
+                                                @Html.Raw(ViewBag.donnee.HTML_Select_libelle_agence)
+                                            </select>
+                                        </div>
+                                    </div>
+
                                 </div>
+
                             </div>
 
-                            <div class="col-xs-12 col-lg-6">
-                                <div class="form-group">
-                                    <label for="form_libelle_profession">@ViewBag.Lang.Job @((ViewBag.Lang.Name as string).ToLower()) :</label>
-                                    <select class="form-control" id="form_libelle_profession" onchange="$('#form_id_profession').val($('#form_libelle_profession').val());" required>
-                                        @Html.Raw(ViewBag.donnee.HTML_Select_libelle_profession)
-                                    </select>
+                            <div class="col-lg-6">
+
+                                <div class="row">
+
+                                    <div class="col-lg-12">
+                                        <legend>
+                                            <i class="fa fa-square"></i> @ViewBag.Lang.Job
+                                        </legend>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-6">
+                                        <div class="form-group">
+                                            <label for="form_id_profession">Code :</label>
+                                            <select class="form-control" name="id_profession" id="form_id_profession" onchange="$('#form_libelle_profession').val($('#form_id_profession').val());" required>
+                                                @Html.Raw(ViewBag.donnee.HTML_Select_code_profession)
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-6">
+                                        <div class="form-group">
+                                            <label for="form_libelle_profession">@ViewBag.Lang.Name :</label>
+                                            <select class="form-control" id="form_libelle_profession" onchange="$('#form_id_profession').val($('#form_libelle_profession').val());" required>
+                                                @Html.Raw(ViewBag.donnee.HTML_Select_libelle_profession)
+                                            </select>
+                                        </div>
+                                    </div>
+
                                 </div>
+
                             </div>
                             <!-- ./ligne -->
 
@@ -205,6 +247,171 @@
                 <button class="btn btn-default btn-success pull-right" id="btn-enregistrer" type="submit" form="form"
                         data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> @ViewBag.Lang.Process ...">
                     <i class="fa fa-check"></i> @ViewBag.Lang.Save
+                </button>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+
+<!-- form 2 -->
+<div class="modal fade gb-modal-enfant-1" id="modal_autorite_signature" role="alert" data-backdrop="static" data-keyboard="false">
+
+    <div class="modal-dialog modal-lg">
+
+        <div class="modal-content">
+
+            <div class="modal-body">
+
+                <!-- Header -->
+                <p style="font-weight: bold; font-size: 18px;">
+                    <!-- Title -->
+                    <span>
+                        <i class="fa fa-pencil-square text-info"></i> @ViewBag.Lang.Signing_authority
+                    </span>
+                    <!-- Close bouton -->
+                    <button type="button" class="close float-right" data-dismiss="modal" aria-hidden="true" style="font-weight: bold;">
+                        <i class="fa fa-times"></i>
+                    </button>
+                </p>
+
+                <!-- Formulaire -->
+                <form method="post" id="form_autorite_signature" name="form" data-parsley-validate>
+
+                    <div class="row">
+
+                        <!-- ligne -->
+                        <div class="col-lg-12">
+                            <legend>
+                                <i class="fa fa-square"></i> @ViewBag.Lang.Form
+                            </legend>
+                        </div>
+                        <!-- ./ligne -->
+                        <!-- Id -->
+                        <input type="hidden" id="form_autorite_signature_id" name="id" value="0" />
+
+                        <!-- ligne -->
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="form-group">
+                                <label for="form_autorite_signature_code">Code :</label>
+                                <input class="form-control" type="text" id="form_autorite_signature_code" name="code" placeholder="Code.*" required />
+                            </div>
+                        </div>
+
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="form-group">
+                                <label for="form_autorite_signature_libelle">@ViewBag.Lang.Name :</label>
+                                <input class="form-control" type="text" id="form_autorite_signature_libelle" name="libelle" placeholder="@ViewBag.Lang.Name .*" required />
+                            </div>
+                        </div>
+                        <!-- ./ligne -->
+                        <!-- ligne -->
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="form-group">
+                                <label for="form_autorite_signature_montant_signature">@ViewBag.Lang.Signing_amount :</label>
+                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_montant_signature" name="montant_signature" placeholder="XXX XXX XXX ..." required />
+                            </div>
+                        </div>
+
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="form-group">
+                                <label for="form_autorite_signature_limite_decouvert_client">@ViewBag.Lang.Customer_overdraft_limit :</label>
+                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_limite_decouvert_client" name="limite_decouvert_client" placeholder="XXX XXX XXX ..." required />
+                            </div>
+                        </div>
+                        <!-- ./ligne -->
+                        <!-- ligne -->
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="form-group">
+                                <label for="form_autorite_signature_debit_max_client">@ViewBag.Lang.Customer_max_debit :</label>
+                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_debit_max_client" name="debit_max_client" placeholder="XXX XXX XXX ..." required />
+                            </div>
+                        </div>
+
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="form-group">
+                                <label for="form_autorite_signature_credit_max_client">@ViewBag.Lang.Customer_max_credit :</label>
+                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_credit_max_client" name="credit_max_client" placeholder="XXX XXX XXX ..." required />
+                            </div>
+                        </div>
+                        <!-- ./ligne -->
+                        <!-- ligne -->
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="form-group">
+                                <label for="form_autorite_signature_montant_max_ligne_credit">@ViewBag.Lang.Line_of_credit_max_amount :</label>
+                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_montant_max_ligne_credit" name="montant_max_ligne_credit" placeholder="XXX XXX XXX ..." required />
+                            </div>
+                        </div>
+
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="form-group">
+                                <label for="form_autorite_signature_montant_limite_pret">@ViewBag.Lang.Loan_limit_amount :</label>
+                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_montant_limite_pret" name="montant_limite_pret" placeholder="XXX XXX XXX ..." required />
+                            </div>
+                        </div>
+                        <!-- ./ligne -->
+
+                    </div>
+
+                </form>
+
+                <div class="row">
+
+                    <!-- ligne -->
+                    <div class="col-lg-12">
+                        <legend>
+                            <i class="fa fa-list"></i> Table
+                        </legend>
+                    </div>
+                    <!-- ./ligne -->
+
+                </div>
+
+                <!-- Table des données -->
+                <table id="table-autorite_signature-donnee" class="table table-condensed jambo_table bulk_action dt-responsive nowrap temps" cellspacing="0" width="100%;">
+
+                    <thead class="headings">
+                        <tr>
+                            <th class="column-title">Code</th>
+                            <th class="column-title">@ViewBag.Lang.Name</th>
+                            <th class="column-title">@ViewBag.Lang.Signing_amount</th>
+                            <th class="column-title">@ViewBag.Lang.Customer_overdraft_limit</th>
+                            <th class="column-title">@ViewBag.Lang.Customer_max_debit</th>
+                            <th class="column-title">@ViewBag.Lang.Customer_max_credit</th>
+                            <th class="column-title">@ViewBag.Lang.Line_of_credit_max_amount</th>
+                            <th class="column-title last">@ViewBag.Lang.Loan_limit_amount</th>
+                            @*<th class="column-title last" width="50px">Action</th>*@
+                            <th class="bulk-actions" colspan="8">
+                                <a class="antoo" style="color:#fff; font-weight:500;">
+                                    Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
+                                </a>
+                            </th>
+                        </tr>
+                    </thead>
+
+                    <tbody></tbody>
+
+                </table>
+
+                <!--Alert Message -->
+                <div id="gbAlert2"></div>
+
+            </div>
+
+            <div class="modal-footer">
+
+                <!-- Bouton de fermiture du modal -->
+                <button type="button" class="btn btn-default pull-left" data-dismiss="modal">
+                    <i class="glyphicon glyphicon-remove"></i> @ViewBag.Lang.Close
+                </button>
+
+                <!-- Bouton d'enregistrement du formulaire -->
+                <button class="btn btn-default btn-success pull-right" id="btn-autorite_signature-selectionner" type="button"
+                        data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> @ViewBag.Lang.Process ...">
+                    <i class="fa fa-check"></i> @ViewBag.Lang.Select
                 </button>
 
             </div>
