- Ajout du menu 'Gestion des zones de pays Wester Union'

--- a/GB/Views/ConfigurationOperation/WesternUnionZonePays.cshtml
+++ b/GB/Views/ConfigurationOperation/WesternUnionZonePays.cshtml
@@ -61,7 +61,7 @@
             </div>
 
             <!-- Formulaire modals -->
-            @Html.Partial("Agence/_Modals")
+            @Html.Partial("WesternUnionZonePays/_Modals")
 
             <div class="x_content">
 
@@ -73,21 +73,10 @@
                             <th width="20px">
                                 <input type="checkbox" id="check-all" class="flat">
                             </th>
-                            <th class="column-title">Code</th>
-                            <th class="column-title">@ViewBag.Lang.Name</th>
                             <th class="column-title">@ViewBag.Lang.Country</th>
-                            <th class="column-title">@ViewBag.Lang.Town</th>
-                            <th class="column-title">@ViewBag.Lang.Address</th>
-                            <th class="column-title">@ViewBag.Lang.Phone</th>
-                            <th class="column-title">@ViewBag.Lang.Postal_code</th>
-                            <th class="column-title">Fax</th>
-                            <th class="column-title">Cobac ID</th>
-                            <th class="column-title">BEAC ID</th>
-                            <th class="column-title">@ViewBag.Lang.User</th>
-                            <th class="column-title">@ViewBag.Lang.IP_Address</th>
-                            <th class="column-title">@ViewBag.Lang.Password</th>
+                            <th class="column-title">Zone</th>
                             <th class="column-title last" width="50px">Action</th>
-                            <th class="bulk-actions" colspan="14">
+                            <th class="bulk-actions" colspan="3">
                                 <a class="antoo" style="color:#fff; font-weight:500;">
                                     Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
                                 </a>
