- Mise à jour du menu 'WesternUnionZonePays'

--- a/GB/Views/ConfigurationOperation/WesternUnionZonePays.cshtml
+++ b/GB/Views/ConfigurationOperation/WesternUnionZonePays.cshtml
@@ -70,6 +70,7 @@
 
                     <thead class="headings">
                         <tr>
+                            <th class="column-title hidden-lg">ID</th>
                             <th width="20px">
                                 <input type="checkbox" id="check-all" class="flat">
                             </th>
