--- a/GB/Views/Shared/_LayoutErreur.cshtml
+++ b/GB/Views/Shared/_LayoutErreur.cshtml
@@ -26,16 +26,13 @@
 
 </head>
 
-<body class="nav-md">
+<body class="dg-body_auth nav-md">
 
     <div class="container body">
 
         @RenderBody()
 
     </div>
-
-    <!-- Cookies notification -->
-    @Html.Partial("_Cookies")
 
     <!-- JSquery -->
     <script src="@Url.Content("~/Resources/js/jquery-2.2.4.min.js")" type="text/javascript"></script>
