--- a/GB/Views/Erreur/Page.cshtml
+++ b/GB/Views/Erreur/Page.cshtml
@@ -1,6 +1,16 @@
 ﻿@{
-    Layout = null;
+    Layout = (ViewBag.donnee.reconnecter) ? "~/Views/Shared/_LayoutErreur.cshtml" 
+                                          : null;
 }
+
+<script type="text/javascript">
+
+    $GB_DONNEE = JSON.parse(JSON.stringify(@Html.Raw(ViewBag.GB_DONNEE)));
+
+</script>
+
+<!-- Script de la page -->
+<script src="@Url.Content("~/Resources/js/Views/" + ViewBag.Id_page + ".js")" type="text/javascript"></script>
 
 <div class="main_container">
 
@@ -11,16 +21,31 @@
             <div class="text-center">
 
                 <h1 class="error-number">
-                    @ViewBag.code
+                    @ViewBag.donnee.code
                 </h1>
 
                 <h2>
-                    @ViewBag.message
+                    @ViewBag.donnee.message
                 </h2>
 
                 <p>
-                    @ViewBag.description
+                    @ViewBag.donnee.description
                 </p>
+
+                @if (ViewBag.donnee.reconnecter)
+                {
+                    <div class="mid_center">
+
+                        <div class="col-lg-12 text-center">
+
+                            <a class="btn btn-lg btn-default" href="@ViewBag.donnee.url">
+                                <i class="fa fa-sign-in"></i> @ViewBag.Lang.Reconnect
+                            </a>
+
+                        </div>
+
+                    </div>
+                }
 
             </div>
 
