- Mise à jour application.

--- a/GB/Views/Securite/Role.cshtml
+++ b/GB/Views/Securite/Role.cshtml
@@ -7,7 +7,7 @@
 
 <script type="text/javascript">
 
-    $GB_DONNEE = JSON.parse(JSON.stringify(@Html.Raw(ViewBag.GB_DONNEE)));  
+    $GB_DONNEE = @Html.Raw(ViewBag.GB_DONNEE);  
 
 </script>
 
