--- a/GB/Views/Erreur/Page.cshtml
+++ b/GB/Views/Erreur/Page.cshtml
@@ -5,7 +5,7 @@
 
 <script type="text/javascript">
 
-    $GB_DONNEE = JSON.parse(JSON.stringify(@Html.Raw(ViewBag.GB_DONNEE)));
+    $GB_DONNEE = @Html.Raw(ViewBag.GB_DONNEE);
 
 </script>
 
