--- a/GB/Views/Shared/_LayoutApplication.cshtml
+++ b/GB/Views/Shared/_LayoutApplication.cshtml
@@ -105,7 +105,7 @@
     <script src="@Url.Content("~/Resources/js/gb.script.js")" type="text/javascript"></script>
     <script type="text/javascript">
         // -- Réccupérer les données à exploiter dans les script du main -- //
-        $GB_DONNEE_PARAMETRES = JSON.parse(JSON.stringify(@Html.Raw(ViewBag.GB_DONNEE)));
+        $GB_DONNEE_PARAMETRES = @Html.Raw(ViewBag.GB_DONNEE);
     </script>
     <!-- gb.menu.js -->
     <script src="@Url.Content("~/Resources/js/gb.menu.js")" type="text/javascript"></script>
