- Mise à jour application

--- a/GB/Views/ConfigurationBanque/Banque.cshtml
+++ b/GB/Views/ConfigurationBanque/Banque.cshtml
@@ -79,8 +79,10 @@
                             <th class="column-title">@ViewBag.Lang.Town</th>
                             <th class="column-title">@ViewBag.Lang.Address 1</th>
                             <th class="column-title">@ViewBag.Lang.Address 2</th>
+                            <th class="column-title">@ViewBag.Lang.Creation_date</th>
+                            <th class="column-title">@ViewBag.Lang.Employee</th>
                             <th class="column-title last" width="50px">Action</th>
-                            <th class="bulk-actions" colspan="7">
+                            <th class="bulk-actions" colspan="9">
                                 <a class="antoo" style="color:#fff; font-weight:500;">
                                     Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
                                 </a>
