- Mise à jour de l'application

--- a/GB/Views/ConfigurationBanque/Devise/_Modals.cshtml
+++ b/GB/Views/ConfigurationBanque/Devise/_Modals.cshtml
@@ -34,7 +34,7 @@
                             <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
                                     <label for="form_code">Code :</label>
-                                    <input class="form-control" type="text" id="form_code" name="code" placeholder="Code.*" required />
+                                    <input class="form-control" type="text" id="form_code" name="code" placeholder="Code.*" maxlength="3" required />
                                 </div>
                             </div>
 
@@ -50,7 +50,7 @@
                             <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
                                     <label for="form_signe">@ViewBag.Lang.Sign :</label>
-                                    <input class="form-control" type="text" id="form_signe" name="signe" placeholder="@ViewBag.Lang.Sign .*" required />
+                                    <input class="form-control" type="text" id="form_signe" name="signe" placeholder="@ViewBag.Lang.Sign .*" maxlength="10" required />
                                 </div>
                             </div>
 
